# AxonC2

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  main  vcpkg.json
.devcontainer/: devcontainer.json
src/: main.cpp
